--- a/bop-i/data_types/strings/style.css
+++ b/bop-i/data_types/strings/style.css
@@ -1,4 +1,9 @@
-
+html, body {
+  font-family: 'Oxygen';
+  padding: 0;
+  margin: 0;
+  margin-left: 0;
+}
 
 #stringInput {
   border-radius: 4px;
