--- a/bop-i/data_types/boolean/style.css
+++ b/bop-i/data_types/boolean/style.css
@@ -1,5 +1,11 @@
 
 body {
+  background-repeat: no-repeat;
+  background-position: top center;
+  width: 80%;
+  background-size: 100% 240%;
+  display: inline;
+  /* background-color: #e85b49; */
   /* display: block;
   position: relative;
   width: 100%;
@@ -27,82 +33,10 @@ p {
 }
 
 .heading {
-  padding-top: 60px;
-}
-
-.toggle-box {
-  width: 171px;
-  height: 171px;
-  border-radius: 20px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
-  background-color: #ffffff;
-  margin-left: 60rem;
-  margin-top: -30px;
-}
-
-/* sun transition */
-
-img.up{
-    content: "";
-    display: block;
-    border-radius: 50%;
-    /* background: yellow; */
-    height: 100px;
-    width: 100px;
-    position: absolute;
-
-    /* need to add with javascripts - maybe with off class? */
-    animation:
-      am 2s ease-in-out forwards 1;
-  }
-
-  img.down{
-      content: "";
-      display: block;
-      border-radius: 50%;
-      /* background: yellow; */
-      height: 100px;
-      width: 100px;
-      position: absolute;
-
-      /* need to add with javascripts - maybe with off class? */
-      animation:
-        pm 2s ease-in-out forwards 1;
-    }
-
-
-
-
-@keyframes am {
-  0% { bottom: -100px; left: -100px;}
-  100% { bottom: 400px; left: 10%;}
-
-}
-
-@keyframes pm {
-  0% { bottom: 400px; left: 10%;}
-  100% { bottom: -100px; left: -100px;}
-}
-
-@keyframes sunset {
-  75% {background: gold;}
-  80% { background: DarkGoldenrod1;}
-  90% { background: orchid4;}
-  100% { background: darken(desaturate(blue, 30%), 40%);}
-}
-
-@keyframes sunrise {
-  0% { background: darken(desaturate(blue, 30%), 40%);}
-  20% { background: orchid4;}
-  60% { background: DarkGoldenrod1;}
-  70% {background: gold;}
-  100% {background:lighten(desaturate(blue, 30%), 40%)}
+  padding-top: 3%;
 }
 
 #words {
-  /* width: 236px;
-  height: 38px; */
-  /* font-family: arial; */
   font-size: 30px;
   font-weight: bold;
   font-style: normal;
@@ -114,9 +48,18 @@ img.up{
   margin: 0;
 }
 
+.toggle-box {
+  width: 10%;
+  border-radius: 20px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  background-color: #ffffff;
+  margin-left: 75%;
+  padding: 1rem 2rem 1rem 2rem;
+}
+
 #words2 {
-  width: 92px;
-  height: 26px;
+  /* width: 92px;
+  height: 26px; */
   font-family: Oxygen;
   font-size: 20px;
   font-weight: bold;
@@ -126,21 +69,20 @@ img.up{
   text-align: center;
   letter-spacing: 0.1px;
   color: #000000;
-  margin-left: 2.25rem;
-  margin-top: -6rem;
-  padding-top: 1rem;
+  /* margin-left: 2.25rem; */
+  margin-top: 0rem;
+  /* padding-top: 1rem; */
 }
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  /* width: 60px;
-  height: 34px; */
-  width: 104px;
-  height: 46px;
-  margin-left: 2rem;
+  width: 110%;
+  height: 3rem;
+  /* margin-left: 2rem;
   margin-top: 2rem;
+  margin-bottom: 2rem; */
 }
 
 /* Hide default HTML checkbox */
@@ -196,4 +138,61 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+
+/* sun transition */
+
+img.up{
+    content: "";
+    display: block;
+    border-radius: 50%;
+    /* background: yellow; */
+    height: 100px;
+    width: 100px;
+    position: absolute;
+
+    /* need to add with javascripts - maybe with off class? */
+    animation:
+      am 2s ease-in-out forwards 1;
+  }
+
+  img.down{
+      content: "";
+      display: block;
+      border-radius: 50%;
+      /* background: yellow; */
+      height: 100px;
+      width: 100px;
+      position: absolute;
+
+      /* need to add with javascripts - maybe with off class? */
+      animation:
+        pm 2s ease-in-out forwards 1;
+    }
+
+@keyframes am {
+  0% { bottom: -10rem; left: -10rem;}
+  100% { bottom: 30rem; left: 10%;}
+
+}
+
+@keyframes pm {
+  0% { bottom: 30rem; left: 10%;}
+  100% { bottom: -10rem; left: -10rem;}
+}
+
+@keyframes sunset {
+  75% {background: gold;}
+  80% { background: DarkGoldenrod1;}
+  90% { background: orchid4;}
+  100% { background: darken(desaturate(blue, 30%), 40%);}
+}
+
+@keyframes sunrise {
+  0% { background: darken(desaturate(blue, 30%), 40%);}
+  20% { background: orchid4;}
+  60% { background: DarkGoldenrod1;}
+  70% {background: gold;}
+  100% {background:lighten(desaturate(blue, 30%), 40%)}
 }
