--- a/bop-i/variables/variable-two/style.css
+++ b/bop-i/variables/variable-two/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 input {
-  width: 10em;
+  width: 70%;
   height: 2.5em;
   border-radius: 4px;
   border:1px solid rgba(0, 0, 0, 0.5);
@@ -19,6 +19,10 @@ input {
   color: #9b9b9b;
   padding-left: 18px;
   margin-top: 1em;
+}
+
+input:focus {
+    color: black;
 }
 
 p {
