--- a/bop-i/variables/variable-two/style.css
+++ b/bop-i/variables/variable-two/style.css
@@ -7,6 +7,7 @@ input {
   height: 2.5em;
   border-radius: 4px;
   border:1px solid rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, -1.5);
   box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, -1.5);
   background-color: #ffffff;
   font-family: 'Oxygen', sans-serif;
